spec/e2e/method/missing_arguments.lit
type Foo {
  method { |a, b|}
}

Foo().method(1); # error: [line 5] Runtime error: Expected 2 arguments but got 1.
